--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,55 +118,97 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="eye_open_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\eye_open_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="forgot_password_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\forgot_password_20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="user_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="password" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\password.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="register_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\register_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="password_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\password_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="user_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user_20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="login_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\login_20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="close_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\close_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="forgot_password_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\forgot_password_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="register_303" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\register_303.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="login_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="geekStoreLogo_bg2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\geekStoreLogo_bg2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="search_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\search_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="insert_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\insert_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="password" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\password.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="password_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\password_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="geekStoreIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\geekStoreIcon.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="register_301" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\register_301.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="register_303" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\register_303.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="edit_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edit_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="geekStoreLogo_bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\geekStoreLogo_bg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="img_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_301.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="userIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\userIcon.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="login_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\login_20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="img_301" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_302.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="geekStoreLogo_bg1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\geekStoreLogo_bg1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="register_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\register_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="eye_open_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\eye_open_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="geekStoreLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\geekStoreLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="register_302" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\register_302.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="close_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\close_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="delete_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delete_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user_20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="geekStoreLogo_bg3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\geekStoreLogo_bg3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="forgot_password_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\forgot_password_20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="eye_closed_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\eye_closed_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="register_302" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\register_302.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="back_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\back_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="forgot_password_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\forgot_password_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="clear_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\clear_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
