--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,14 +124,17 @@
   <data name="login_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="geekStoreLogo_bg2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\geekStoreLogo_bg2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="img_301" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_302.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="search_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\search_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="user_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="geekStoreLogo_bg2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\geekStoreLogo_bg2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="closed_eye_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\closed_eye_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="insert_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\insert_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -148,6 +151,9 @@
   <data name="register_301" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\register_301.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="edit_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\edit_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -163,8 +169,8 @@
   <data name="login_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login_20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="img_301" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img_302.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="close_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\close_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="geekStoreLogo_bg1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\geekStoreLogo_bg1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -177,9 +183,6 @@
   </data>
   <data name="geekStoreLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\geekStoreLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="close_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\close_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -199,6 +202,9 @@
   <data name="eye_closed_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\eye_closed_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="clear_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\clear_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="register_302" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\register_302.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -208,7 +214,7 @@
   <data name="forgot_password_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\forgot_password_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="clear_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\clear_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="open_eye_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\open_eye_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
