--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,14 +124,14 @@
   <data name="login_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="img_301" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img_302.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="geekStoreLogo_bg2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\geekStoreLogo_bg2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="search_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\search_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="geekStoreLogo_bg2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\geekStoreLogo_bg2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="user_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="closed_eye_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\closed_eye_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,23 +145,23 @@
   <data name="password_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\password_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="geekStoreIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\geekStoreIcon.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="register_301" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\register_301.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="user_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="img_301" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_302.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="edit_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\edit_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="img_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_301.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="geekStoreLogo_bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\geekStoreLogo_bg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="img_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img_301.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="products_100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\products_100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="userIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\userIcon.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -184,6 +184,9 @@
   <data name="geekStoreLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\geekStoreLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="filter_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\filter_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -196,11 +199,20 @@
   <data name="geekStoreLogo_bg3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\geekStoreLogo_bg3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="about_150" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\about_150.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="open_eye_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\open_eye_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="forgot_password_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\forgot_password_20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="eye_closed_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\eye_closed_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="about_100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\about_100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="clear_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\clear_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -214,7 +226,16 @@
   <data name="forgot_password_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\forgot_password_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="open_eye_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\open_eye_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="demonstrative_100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\demonstrative_100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="geekStoreIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\geekStoreIcon.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="products_box_100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\products_box_100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="add_cart_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add_cart_30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
